--- a/data/build.gradle
+++ b/data/build.gradle
@@ -16,6 +16,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
+        buildConfigField("String", "API_KEY", "\"e71904384c3c4ad4b72c4b713fe815de\"")
     }
 
     buildTypes {
@@ -38,6 +39,8 @@ dependencies {
 
     implementation "io.reactivex.rxjava2:rxjava:2.1.6"
     implementation "com.squareup.retrofit2:retrofit:2.3.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:3.8.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
     implementation "com.squareup.retrofit2:converter-gson:2.3.0"
     implementation "androidx.room:room-runtime:2.0.0-beta01"
     implementation "androidx.room:room-rxjava2:2.0.0-beta01"
